Added modification from willem review up to start of HAVOKc

--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -6,9 +6,9 @@
 \section{Unknown suspended payloads}
 
     \paragraph
-    Figure~\ref{fig:real_suspended_payload_example} shows an example of a practical use case of a mulitrotor with a suspended payload.
-    Items are placed in a water proof bag and transported by the mulitrotor to a place of need.
-    Note that the mulitrotor does not know the dynamics of the payload before flight, 
+    Figure~\ref{fig:real_suspended_payload_example} shows an example of a practical use case of a multirotor with a suspended payload.
+    Items are placed in a water proof bag and transported by the multirotor to a place of need.
+    Note that the multirotor does not know the dynamics of the payload before flight, 
     because the items may change depending on the need in the specific situation. 
     The shape and mass of the loaded items will have an effect on swing of the payload, 
     and the control system should be able to fly well despite the altered flight dynamics.
