--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -3,17 +3,20 @@
 \chapter{Modelling}
 \label{chap:modelling}
 
-This chapter discusses the mathematical modelling of a mulitrotor with a suspended
-payload which is based on a practical mulitrotor UAV named Honeybee.
+This chapter discusses the mathematical modelling of a multirotor with a suspended
+payload which is based on a practical multirotor UAV named Honeybee.
 The model is first derived as a \gls{2D} model.
 The system identification and control system techniques in later chapters will then be explained based on the \gls{2D} model to avoid unnecessary complexity.
 Finally, it will be described how this model and the techniques in later chapters are extended to the 3D case.
-This 3D mathematical model will be used in a nonlinear simulation of a mulitrotor and suspended payload.
+This 3D mathematical model will be used in a nonlinear simulation of a multirotor and suspended payload.
 1
 \section{Coordinate frames}
 \section{States}
 \section{Forces and moments}
 \section{Lagrangian mechanics}
+\begin{enumerate}
+    \item Discuss weak link between altitude dynamics and swing angle
+\end{enumerate}
 \section{Linearised model}
     \label{sec:linear_model}
 
