--- a/results/plots/havok_vs_dmd_Ttrain_2mps.tex
+++ b/results/plots/havok_vs_dmd_Ttrain_2mps.tex
@@ -48,7 +48,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{\gls{DMDc} and \gls{HAVOK} prediction errors for different lengths of practical training data
+    \caption{\gls{DMDc} and \gls{HAVOKc} prediction errors for different lengths of practical training data
     ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter}, $T_s =$~\SI{0.03}{\second}).}
     \label{fig:havok_vs_dmd_Ttrain_2mps}
 \end{figure}
