--- a/system_id/plots/MAE_vs_q.tex
+++ b/system_id/plots/MAE_vs_q.tex
@@ -38,7 +38,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{\gls{DMDc} and \gls{HAVOK} predictions error for different lengths of noisy training data
+    \caption{\gls{DMDc} and \gls{HAVOKc} predictions error for different lengths of noisy training data
     ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}, $T_{train} =$~\SI{60}{\second}.)}
     \label{fig:NMAE_vs_q}
 \end{figure}
