--- a/glossary.tex
+++ b/glossary.tex
@@ -16,6 +16,7 @@
 \newacronym{DMD}{DMD}{Dynamic Mode Decomposition}
 \newacronym{DMDc}{DMDc}{Dynamic Mode Decomposition with Control}
 \newacronym{HAVOK}{HAVOK}{Hankel Alternative View Of Koopman}
+\newacronym{HAVOKc}{HAVOKc}{Hankel Alternative View Of Koopman with Control}
 \newacronym{SINDy}{SINDy}{Sparse Identification of Nonlinear Dynamics}
 
 \newacronym{RLS}{RLS}{Recursive Least Squares}
