--- a/system_id/plots/MAE_vs_Ts.tex
+++ b/system_id/plots/MAE_vs_Ts.tex
@@ -38,7 +38,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{\gls{DMDc} and \gls{HAVOK} predictions error for different sample times of noisy training data
+    \caption{\gls{DMDc} and \gls{HAVOKc} predictions error for different sample times of noisy training data
     ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_{train} =$~\SI{60}{\second}.)}
     % \label{fig:havok_vs_dmd_noise}
 \end{figure}
