--- a/system_id/plots/havok_vs_dmd_noise.tex
+++ b/system_id/plots/havok_vs_dmd_noise.tex
@@ -38,7 +38,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{\gls{DMDc} and \gls{HAVOK} prediction errors for different lengths of noisy training data
+    \caption{\gls{DMDc} and \gls{HAVOKc} prediction errors for different lengths of noisy training data
     ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}).}
     \label{fig:havok_vs_dmd_noise}
 \end{figure}
