--- a/system_id/plots/system_param_subfigs.tex
+++ b/system_id/plots/system_param_subfigs.tex
@@ -4,6 +4,6 @@
     \centering
     \input{system_id/plots/different_lengths.tex} % subfigure
     \input{system_id/plots/different_masses.tex} % subfigure
-    \caption{\gls{HAVOK} prediction errors for different system parameters}
+    \caption{\gls{HAVOKc} prediction errors for different system parameters}
     \label{fig:system_param_subfigs}  
 \end{figure}
